assets/css/style.css
/* header */
.header {
  position: fixed;
  z-index: 1;
  top: 30px;
  width: 100%;
}

.header .row .inner-header {
  background: white;
  border-radius: 40px;
  display: flex;
  justify-content: space-around;
  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.1);
}

.header .row .inner-header .icon-menu {
  display: none;
}

.header .row .col-12 .logo {
  top: 11px;
  display: flex;
  align-items: center;
}

.header .row .col-12 .nav-item a {
  display: inline-block;
  padding: 25px 20px;
  color: var(--color-black);
  font-size: 15px;
}

@media (max-width: 1199px) {
  .header .row .col-12 .nav .nav-item a {
    font-size: 15px;
    padding: 25px 10px;
  }
}

@media (max-width: 991px) {
  .header .row .inner-header {
    justify-content: space-between;
  }

  .header .row .col-12 .logo {
    margin-left: 20px;
  }

  .header .row .col-12 .icon-menu {
    display: block;
    margin-right: 20px;
  }

  .header .row .col-12 .icon-menu i {
    display: inline-block;
    padding: 20px;
    font-size: 25px;
  }

  .header .row .col-12 .nav {
    display: none;
  }
}

/* end header */

/* section1 */
.section1 {
  background-image: url(../img/banner-bg.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 860px;
}

.section1 .row {
  padding: 0 240px;
  text-align: center;
  color: white;
}

.section1 .row .inner-title {
  margin-bottom: 40px;
}

.section1 .row .inner-title .strategy:hover {
  color: var(--color-pink);
}

.section1 .row .inner-title .business:hover {
  color: var(--color-pink);
}

.section1 .row .inner-desc {
  margin-bottom: 40px;
}

@media (max-width: 991px) {
  .section1 .row {
    padding: 0;
  }
}

/* end section1 */

/* section2 */
.section2 {
  position: relative;
  margin-top: -312px;
  padding: 40px;
}

@keyframes go-up {
  0% {
    transform: translateY(50%);
  }

  100% {
    transform: translateY(0%);
  }
}

.section2 .row .inner-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: white;
  color: black;
  border-radius: 20px;
  cursor: pointer;
  padding: 15px;
  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.1);
  animation: go-up 2s ease-out;
}

.section2 .row .inner-item:hover>.icon {
  background: var(--color-pink);
}

.section2 .row .inner-item .icon {
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--color-purple);
  border-radius: 50%;
  width: 90px;
  height: 90px;
  margin: 20px 0;
}

.section2 .row .inner-item .title {
  margin-bottom: 20px;
  font-size: 18px;
  letter-spacing: 0.8;
}

.section2 .row .inner-item .desc {
  font-size: 13px;
  letter-spacing: 0.8;
  color: var(--color-text);
}

@media (max-width: 1199px) {
  .section2 {
    margin: 0;
  }
}

@media (max-width: 991px) {
  .section2 .row .inner-item {
    margin-bottom: 20px;
  }
}

/* end section2 */
/* section3 */
.section3 {
  margin-top: 100px;
}

.section3 .row .left-item {
  display: flex;
  justify-content: center;
  align-content: center;
}

@keyframes left-to-right {
  0% {
    transform: translateX(-100%);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

.section3 .row .left-item img {
  width: 280px;
  height: auto;
  -o-object-fit: cover;
  object-fit: cover;
  animation: left-to-right 2s ease-out;
}

.section3 .row .right-item {
  height: 100%;
  padding: 50px;
  padding-left: 100px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.section3 .row .right-item .desc {
  color: var(--color-text);
  text-align: justify;
}

@media (max-width: 991px) {
  .section3 .row .right-item {
    padding: 50px;
  }
}

/* hr  */
.hr {
  margin-top: 125px;
}

@media (max-width: 991px) {
  .hr {
    margin-top: 60px;
  }
}

@media (max-width: 575px) {
  .hr {
    margin-top: 20px;
  }
}

/* section4 */
.section4 {
  margin-top: 100px;
}

.section4 .row .left-item {
  display: flex;
  justify-content: center;
  align-content: center;
}

@keyframes right-to-left {
  0% {
    transform: translateX(100%);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

.section4 .row .left-item img {
  width: 280px;
  height: auto;
  -o-object-fit: cover;
  object-fit: cover;
  animation: right-to-left 2s ease-out;
}

.section4 .row .right-item {
  height: 100%;
  padding: 50px;
  padding-right: 100px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.section4 .row .right-item .desc {
  color: var(--color-text);
  text-align: justify;
}

@media (max-width: 991px) {
  .section4 {
    margin-top: 50px;
  }

  .section4 .row .right-item {
    padding: 50px;
  }
}

@media (max-width: 575px) {
  .section4 {
    margin-top: 15px;
  }
}

/* section 5 */
.section5 {
  margin-top: 50px;
  background-image: url(../img/work-process-bg.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}

.section5 .row1 .box-title .title {
  color: white;
}

.section5 .row1 .box-title .desc {
  color: white;
}

.section5 .row2 .tag {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
  background: white;
  padding: 28px;
  margin-bottom: 80px;
  border-radius: 20px;
  position: relative;
  z-index: 1;
  transition: transform 0.5s;
}

.section5 .row2 .tag:hover {
  transform: translateY(-10%);
}

.section5 .row2 .tag::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  bottom: -10px;
  right: -10px;
  background: white;
  opacity: 0.15;
  border-radius: 20px;
  z-index: -1;
}

.section5 .row2 .tag .tag-img {
  width: 100%;
  margin-bottom: 10px;
}

.section5 .row2 .tag .tag-title {
  margin-bottom: 10px;
  color: var(--color-black);
  font-size: 17px;
  font-weight: 300;
}

.section5 .row2 .tag .tag-desc {
  color: var(--color-text);
  font-size: 14px;
}
/* ... */

